--- a/src/main/webapp/css/sidenav.css
+++ b/src/main/webapp/css/sidenav.css
@@ -9,7 +9,7 @@ html, body {
 	width: 16%; 
 	position: fixed;
 	z-index: 1;
-	margin-top: 5%;
+	margin-top: 0%;
 	background-color: #548CA8;
 	overflow-x: hidden;
 	padding: 8px 0;
@@ -18,7 +18,7 @@ html, body {
 .sidenav a {
 	padding: 8px 8px 6px 16px;
 	text-decoration: none;
-	font-size: 18px;
+	font-size: 16px;
 	color: #fff;
 	display: block;
 }
@@ -28,12 +28,15 @@ html, body {
 }
 
 .main {
-	margin-top: 7%;
-	margin-left: 19%; 
+	width: 100%;
+	height: 100%;
+	background-color: #548CA8;
+	margin-top: 0%;
+	margin-left: 16%; 
 	margin-bottom: 2%;
-	background-color: #FFF;
 	font-size: 12px;
 	padding: 20px 10px;
+	overflow-x: hidden;
 }
 
 @media screen and (max-height: 450px) {
